--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".activity.ChatBot"
+            android:exported="false" />
+        <activity
             android:name=".activity.collage_Information"
             android:exported="false"
             android:label="@string/title_activity_collage_information"
-            android:theme="@style/Theme.MyApplication" />
-        <!-- <activity -->
+            android:theme="@style/Theme.MyApplication" /> <!-- <activity -->
         <!-- android:name="act" -->
         <!-- android:exported="false" /> -->
         <activity
