--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,17 @@ android {
 
 dependencies {
 
-        implementation "io.ktor:ktor-client-core:2.3.4"
-        implementation "io.ktor:ktor-client-cio:2.3.4"
-    implementation "io.ktor:ktor-client-content-negotiation:2.3.4"
-    implementation "io.ktor:ktor-serialization-kotlinx-json:2.3.4"
-    implementation "io.ktor:ktor-client-apache:1.6.0" // Replace with the latest version
-
+//        implementation "io.ktor:ktor-client-core:2.3.4"
+//        implementation "io.ktor:ktor-client-cio:2.3.4"
+//    implementation "io.ktor:ktor-client-content-negotiation:2.3.4"
+//    implementation "io.ktor:ktor-serialization-kotlinx-json:2.3.4"
+//    implementation "io.ktor:ktor-client-apache:1.6.0" // Replace with the latest version
+    implementation "io.ktor:ktor-client-core:2.2.2"
+    implementation "io.ktor:ktor-client-json:2.2.2"
+    implementation "io.ktor:ktor-client-serialization:2.2.2"
+    implementation "io.ktor:ktor-client-content-negotiation:2.2.2"
+    implementation "io.ktor:ktor-client-cio:2.2.2"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:2.2.2"
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
@@ -62,6 +67,7 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
 
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
