--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,12 +54,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'com.google.code.gson:gson:2.8.9' // Use the latest version
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
